--- a/publibang/template/index.html
+++ b/publibang/template/index.html
@@ -3,12 +3,12 @@
 <div class="container">   
     <div class="row">
         <div class="col-md-3">
-            <img class='img-responsive m-bottom20' src="{{ STATIC_URL }}/img/gandores.png" alt="" />
+            <img class='m-left-100 img-responsive m-bottom20' src="{{ STATIC_URL }}/img/gandores.png" alt="" />
             <p class='text-center'><a class='btn btn-success'  href="/ganador/">G A N A D O R E S</a></p>
         </div>
 
         <div class="col-md-6 text-center">
-            <h2 class='text-center'>Cuenta regresiva</h2>
+            <h3 class='text-center'>SOLAMENTE FALTAN </h3>
             <div id="DateCountdown" data-date="2015-01-01 00:00:00" ></div>
 
                     <br><br><br>
@@ -19,12 +19,14 @@
                         <div class="modal-content">
                           <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                            <h4 class="modal-title" id="myModalLabel">www.hyo.club</h4>
                           </div>
                           <div class="modal-body">
-                            <h2>MANERA DE PARTICIPAR</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint totam quidem officiis eius corporis laborum numquam possimus suscipit illum explicabo officia nulla quasi non harum, necessitatibus omnis, temporibus quae consectetur!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta esse earum magni similique iusto, atque voluptatibus aperiam vel minima, numquam, fugit, in quaerat facilis. Iure exercitationem aperiam eligendi fugit maxime!</p>
+                            
+                            <p>1) Es necesario crear una cuenta  para utilizar  nuestros Servicios. </p>
+                            <p>2) Ingresar a a una publicidad de su preferencia para participar</p>
+                            <p>3) En el publicidad igresada dar clic al boton participar</p>
+                            <p>4) Esperar el dia del sorteo que seran cada sabado</p>
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -35,7 +37,7 @@
                     </div>
         </div>
         <div class="col-md-3">
-            <img class='img-responsive m-bottom20' src="{{ STATIC_URL }}/img/lista.png" alt="" />
+            <img class='m-left-100 img-responsive m-bottom20' src="{{ STATIC_URL }}/img/lista.png" alt="" />
             <p class='text-center'><a class='btn btn-info'href="/participantes/">LISTA DE PARTICIPANTES</a></p>
         </div>
     </div>
@@ -44,40 +46,57 @@
         <br>
         <div class="col-xs-12 col-md-3">
             <div class="ex2">
-                <a href="#"><img class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco1.jpg" alt=""></a>
+                <a href="/miniweb/"><img class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco1.jpg" alt=""></a>
             </div>
             
             <h3 class='text-center text-info' ><strong>Pitbull Bar</strong></h3>
             <h4 class='text-center text-info'>7:30PM - 0:00AM</h4>
-            <h3 class=' btn btn-info btn-block'><a class='text-white' href="/miniweb/">Ingresa y Participa</a></h3>
+            <div class="text-center">
+                <p class=' btn btn-info '><a class='text-white' href="/miniweb/">Ingresa y Participa</a></p>
+            </div>
+            <br>
+        </div>
+
+        <div class="col-xs-12 col-md-3">
+            <div class="ex2">
+                <a href="/miniweb/"><img class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco1.jpg" alt=""></a>
+            </div>
+            
+            <h3 class='text-center text-info' ><strong>Pitbull Bar</strong></h3>
+            <h4 class='text-center text-info'>7:30PM - 0:00AM</h4>
+            <div class="text-center">
+                <p class=' btn btn-info '><a class='text-white' href="/miniweb/">Ingresa y Participa</a></p>
+            </div>
+            <br>
         </div>
         <div class="col-xs-12 col-md-3">
             <div class="ex2">
-                <a href="#"><img class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco2.jpg" alt=""></a>
+                <a href="/miniweb/"><img class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco1.jpg" alt=""></a>
             </div>
             
             <h3 class='text-center text-info' ><strong>Pitbull Bar</strong></h3>
             <h4 class='text-center text-info'>7:30PM - 0:00AM</h4>
-            <h3 class=' btn btn-info btn-block'><a class='text-white' href="/miniweb/">Ingresa y Participa</a></h3>
+            <div class="text-center">
+                <p class=' btn btn-info '><a class='text-white' href="/miniweb/">Ingresa y Participa</a></p>
+            </div>
+            <br>
         </div>
         <div class="col-xs-12 col-md-3">
             <div class="ex2">
-                <a href="#"><img class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco1.jpg" alt=""></a>
+                <a href="/miniweb/"><img class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco1.jpg" alt=""></a>
             </div>
             
             <h3 class='text-center text-info' ><strong>Pitbull Bar</strong></h3>
             <h4 class='text-center text-info'>7:30PM - 0:00AM</h4>
-            <h3 class=' btn btn-info btn-block'><a class='text-white' href="/miniweb/">Ingresa y Participa</a></h3>
-        </div>
-        <div class="col-xs-12 col-md-3">
-            <div class="ex2">
-                <a href="#"><img class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco1.jpg" alt=""></a>
+            <div class="text-center">
+                <p class=' btn btn-info '><a class='text-white' href="/miniweb/">Ingresa y Participa</a></p>
             </div>
-            
-            <h3 class='text-center text-info' ><strong>Pitbull Bar</strong></h3>
-            <h4 class='text-center text-info'>7:30PM - 0:00AM</h4>
-            <h3 class=' btn btn-info btn-block'><a class='text-white' href="/miniweb/">Ingresa y Participa</a></h3>
+            <br>
         </div>
+
+        
+
+        
         
 
         
