--- a/publibang/template/miniweb.html
+++ b/publibang/template/miniweb.html
@@ -16,7 +16,7 @@
         </div>
         <div class="text-right col-xs-3"> 
             
-            <h4 class='text-center'><strong class='text-info'>Horario de atencion</strong><span class='btn btn-success'>8:30 AM - 10:00 PM</span></span>  </h4>
+            <h4 class='text-center'><strong class='text-info'>Horario de atencion</strong><span class='btn btn-success' disabled='disabled'>8:30 AM - 10:00 PM</span></span>  </h4>
         <br>
         </div>
                     
@@ -49,21 +49,13 @@
                         <div class="modal-content">
                           <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class=" text-center modal-title" id="myModalLabel">Debes rellanar solo lo que se te pide:</h4>
+                            <h4 class=" text-center modal-title" id="myModalLabel">www.hyo.club</h4>
                           </div>
                           <div class="modal-body">
                             <div class="xs-4">
-                                <form>
-                                  <div class="form-group">
-                                    <label for="alias">Alias :</label>
-                                    <input type="alias" class="form-control" id="alias" placeholder="Enter email">
-                                  </div>
-                                  <div class="form-group">
-                                    <label for="movil">movil</label>
-                                    <input type="movil" class="form-control" id="movil" placeholder="movil">
-                                  </div>
+                                <h5 class='text-center text-orange'>!!! FELICITACIONES YA ESTAR PARTICIPANDO POR EL OBSEQUIO DE NUESTRO ANUNCINTE!!!</h5>
                                   
-                                  <button type="submit" class="btn btn-primary">Aceptar</button>
+                                  <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
                                   
                                 </form>                
                             </div>
@@ -214,16 +206,20 @@
 
         </div> 
     </div>
+    <hr>
     <div class="row">
         <h4 class='text-center text-orange'><strong>ENLACES DE INTERES</strong></h4>
-        <div class="col-xs-12 col-md-2">
+        <div class=" text-center col-xs-12 col-md-2">
             <div class="ex2">
-                <a href="/miniweb/"><img class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco1.jpg" alt=""></a>
+                <a href="/miniweb/"><img  style="float:center;" class='img-responsive img-rounded' src="{{STATIC_URL}}img/disco1.jpg" alt=""></a>
             </div>
             
             <h3 class='text-center text-info' ><strong>Pitbull Bar</strong></h3>
             <h4 class='text-center text-info'>7:30PM - 0:00AM</h4>
-            <h3 class=' btn btn-info btn-block'><a class='text-white' href="/miniweb/">Ingresa y Participa</a></h3>
+            <div class="text-center">
+                <p class=' btn btn-info '><a class='text-white' href="/miniweb/">Ingresa y Participa</a></p>
+            </div>
+            
         </div>
         <div class="col-xs-12 col-md-2">
             <div class="ex2">
