--- a/publibang/template/base.html
+++ b/publibang/template/base.html
@@ -3,9 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title>www.hyo.club</title>
+    <title>Hyo.club</title>
     <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/styck-footer.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/custom.css" />
@@ -28,7 +27,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                
+
                 <ul class="nav navbar-nav navbar-right">
                 	{% if user.is_authenticated %}
                     <li class="dropdown">
